<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/destination_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:prompt="@string/select_destination_prompt" />

    <TextView
        android:id="@+id/num_days_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/destination_spinner"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/num_days_label" />

    <EditText
        android:id="@+id/num_days_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/num_days_label"
        android:layout_toEndOf="@id/num_days_label"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/num_days_hint"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/budget_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/num_days_edittext"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/budget_label" />

    <EditText
        android:id="@+id/budget_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/budget_label"
        android:layout_toEndOf="@id/budget_label"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/budget_hint"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/generate_itinerary_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/budget_edittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/generate_itinerary_button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="230dp"
        android:text="Find Nearby Places" />

</RelativeLayout>
